# codexy

./: .codexy-loc-exceptions  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ko.md  README.md  clippy.toml  handoff.md  install  marketplace.json  package.json
.agents/plugins/: marketplace.json  release-publish-contract.json
.github/workflows/: bootstrap-package.yml  plugin-runtime-binaries.yml  plugin-version-bump.yml  python-package.yml  runtime-activation.yml  runtime-candidate.yml  rust-test.yml  touched-loc-gate.yml
docs/: architecture.md
evidence/issue-276/: metadata-only-window-comparison.json
plugins/codexy/: .mcp.json  bootstrap-codexy-agents  check-codexy-agents  runtime-release.json
scripts/: activate-runtime-contract  build-version-pr-state  canonicalize-version-pr-issue  generate-hook-policy-inventory  generate-release-changelog  inspect-mcp-entrypoints  inspect-mcp-response  inspect-release-archive  plan-version-pr-reconciliation  profile-rust-tests  profile_rust_command_forms.py  profile_rust_shell.py  profile_rust_shell_source.py  profile_rust_substitutions.py  profile_rust_workflow.py  reconcile-runtime-candidate-assets  reconcile-version-pr  render-version-pr-metadata  session-audit  sync-plugin-version  sync-plugin-version.py  validate-plugin-config  validate-plugin-config.py  validate-plugin.mjs  verify-runtime-activation-branch  version_pr_identity.py
src/: child_monitoring.rs  lib.rs  mcp.rs  paths.rs  shell.rs  version.rs
src/codegraph/: files.rs  language.rs  markup.rs  mod.rs  parse.rs  path_ops.rs  python.rs  resolve.rs  tools.rs
src/lsp/: command.rs  config.rs  mod.rs  pathing.rs  protocol.rs  server_requests.rs  session.rs  session_diagnostics.rs  tools.rs
src/validation/: agent_model_contract.rs  agent_registration.rs  agent_registration_catalog.rs  child_goal_reporting.rs  child_handoff_readiness.rs  child_handoff_readiness_claims.rs  child_handoff_readiness_heads.rs  child_handoff_readiness_status.rs  child_handoff_readiness_text.rs  child_lane_active_thread_capacity.rs  child_lane_active_thread_count.rs  child_lane_active_thread_count_negation.rs  child_lane_active_thread_count_records.rs  child_lane_active_thread_count_segments.rs  child_lane_active_thread_evidence.rs  child_lane_active_thread_freed_capacity.rs  child_lane_active_thread_operations.rs  child_lane_active_thread_owner_lookup_segments.rs  child_lane_active_threads.rs  child_lane_active_threads_module.rs  child_lane_classification_authority.rs  child_lane_classification_boundaries.rs  child_lane_classification_context.rs  (+116 more)
tests/: architecture_docs_inventory.rs  archive_binary_hygiene.rs  archive_fixture_nested_cargo.rs  archive_fixture_runtime_contract.rs  archive_mcp_wrapper_config.rs  archive_path_regressions.rs  archive_policy_inventory_hygiene.rs  archive_private_key.rs  archive_secret_scan.rs  bootstrap_package_admission.rs  child_local_monitoring.rs  codegraph_language_regressions.rs  codegraph_web_language_regressions.rs  hook_admission_policy.rs  hook_effective_context_continuation.rs  hook_git_normalization_policy.rs  hook_grouped_execution_context.rs  hook_mutation_admission_matrix.rs  hook_mutation_surface_review.rs  hook_persistent_environment_and_rewrites.rs  hook_policy_composition.rs  hook_pr_admission_policy.rs  integration_target_budget.rs  lsp_readiness.rs  mcp_response_checker.rs  mcp_server_names.rs  mcp_stdio.rs  mcp_wrapper_bootstrap.rs  mcp_wrapper_release_cache.rs  profile_rust_tests.rs  release_archive_gate.rs  release_archive_process_cleanup.rs  release_archive_windows_safety.rs  release_changelog_script.rs  release_tag_parity.rs  release_workflow_parity.rs  repository_eol_contract.rs  runtime_activation_branch_recovery.rs  runtime_candidate_asset_recovery.rs  runtime_platform_detection.rs  (+365 more)
(+422 files in other folders)
