[package]
name = "codexy-runtime"
version = "1.2.2"
edition = "2024"
autotests = false
rust-version = "1.85"
license = "MIT"
description = "Rust runtime binaries for the Codexy Codex plugin."
repository = "https://github.com/eunsoogi/codexy"
readme = "README.md"
keywords = ["codex", "plugin", "mcp", "lsp", "automation"]
categories = ["development-tools"]

[features]
default = ["runtime-activation"]
runtime-activation = ["dep:sha2"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = { version = "0.10", optional = true }
tempfile = "3"
toml = "0.9"

[dev-dependencies]
serde_yaml = "0.9"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"

[profile.test]
debug = 0
strip = "symbols"
incremental = false

[[test]]
name = "suite_all"
path = "tests/suites/all.rs"

[[test]]
name = "suite_archive"
path = "tests/suites/archive.rs"
